--- a/contact.html
+++ b/contact.html
@@ -5,20 +5,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="menu-placeholder"></div>
-  <div class="content">
-    <p>Email: studio@florenceparadisleduc.com</p>
-    <p>Instagram: @florenceparadisleduc</p>
-    <p>Studio visits available by appointment</p>
-    <p>Montreal, Quebec</p>
+  <a href="/index.html" class="logo-container" id="logo-container"></a>
+  <div class="sidebar">
+    <div id="menu-placeholder"></div>
   </div>
-
-  <script>
-    fetch('menu.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('menu-placeholder').innerHTML = data;
-      });
-  </script>
+  <div class="main-content">
+    <div class="content">
+      <p>Email: studio@florenceparadisleduc.com</p>
+      <p>Instagram: @florenceparadisleduc</p>
+      <p>Studio visits available by appointment</p>
+      <p>Montreal, Quebec</p>
+    </div>
+  </div>
+  <script src="alternating_logo.js"></script>
 </body>
 </html>
