Reorganise and fix with claude

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Florence Paradis Leduc</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Florence Paradis Leduc - Ceramic Artist Portfolio">
+  <title>Florence Paradis Leduc | Ceramic Artist</title>
+  <link rel="stylesheet" href="/css/styles.css">
+  <!-- Favicon -->
+  <link rel="icon" href="/assets/logo/logo-fpl.png" type="image/png">
 </head>
 <body>
   <a href="/index.html" class="logo-container" id="logo-container">
@@ -16,7 +21,8 @@
   <div class="main-content">
     <div class="gallery" id="gallery"></div>
   </div>
-  <script src="alternating_logo.js"></script>
-  <script src="load_images_descriptions.js"></script>
+  
+  <script src="/js/alternating_logo.js"></script>
+  <script src="/js/load_images_descriptions.js"></script>
 </body>
 </html>
