--- a/pages/statement.html
+++ b/pages/statement.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Artist Statement - Florence Paradis Leduc">
   <title>Artist Statement - Florence Paradis Leduc</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/assets/logo/logo-fpl.png" type="image/png">
 </head>
 <body>
   <a href="/index.html" class="logo-container" id="logo-container"></a>
@@ -15,6 +19,6 @@
       <p>Drawing inspiration from biological structures and natural phenomena, my work seeks to blur the line between the manufactured and the naturally occurring. The resulting pieces exist in a space between recognition and abstraction, inviting viewers to question their relationship with the natural world.</p>
     </div>
   </div>
-  <script src="alternating_logo.js"></script>
+  <script src="/js/alternating_logo.js"></script>
 </body>
 </html>
