--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Contact - Florence Paradis Leduc">
   <title>Contact - Florence Paradis Leduc</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/assets/logo/logo-fpl.png" type="image/png">
 </head>
 <body>
   <a href="/index.html" class="logo-container" id="logo-container"></a>
@@ -17,6 +21,6 @@
       <p>Montreal, Quebec</p>
     </div>
   </div>
-  <script src="alternating_logo.js"></script>
+  <script src="/js/alternating_logo.js"></script>
 </body>
 </html>
