--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Florence Paradis Leduc - Ceramic Artist Portfolio">
-  <title>Florence Paradis Leduc | Ceramic Artist</title>
+  <meta name="description" content="About Florence Paradis Leduc - Ceramic Artist">
+  <title>Florence Paradis Leduc | About</title>
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="icon" href="/assets/logo/logo-fpl.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
   </div>
   
   <div class="main-content">
-    <div class="gallery" id="gallery"></div>
+    <div id="about-content" class="content"></div>
   </div>
   
   <script src="/js/markdown-parser.js"></script>
